# DSA_II-26

./: CMakeLists.txt  elements.txt
lab_1/classwork/: elements  funcions.h  main.c
lab_1/homework/: main.c
lab_4/homework/: hw.c
lab_5/classwork/: main.c
lab_5/homework/: main.c
lab_6/classwork/: fel1.c  fel3.c
parci1/: fel2.c  main.c
